2012-03-12  Sancho Lerena <slerena@artica.es>

	* util/pandora_xml_stress.agents
	util/pandora_xml_stress.conf: Added default file for agent
	dictionary. Better defaults on modules. Ready to be used for
	testing Pandora FMS servers.

2012-03-08  Koichiro Kikuchi <koichiro@rworks.jp>

	* util/pandora_db.pl: Fixed wrong SQL of my previous commit.

2012-03-08  Koichiro Kikuchi <koichiro@rworks.jp>

	* util/pandora_db.pl: Don't delete alerts if non-init/unknown
	 module to which these alerts assigned has not been deleted.

2012-03-07  Sancho Lerena <slerena@artica.es>

	* util/pandora_xml_stress.conf
	util/pandora_xml_stress.pl: Now xml_stress tool can use units
	in the XML generated files. Default configuration file is useful
	to generate "real" scenarios.

        * lib/PandoraFMS/Core.pm: Updated version.

        * lib/PandoraFMS/DataServer.pm: Support for "UNIT" tag in the
        XML to update module data units from the XML.

        * util/pandora_csvbridge.pl: New tool to create XML data files
        from CSV files containing data.

        * util/pandora_watchdog.sh: Watchdog for Pandora FMS server,
        taken from the documentation and updated.

	*  util/pandora_dbstress.pl, 
	util/pandora_db.pl: Updated version strings.

2012-02-29  Vanessa Gil  <vanessa.gil@artica.es>

	* bin/PandoraFMS/Core.pm: Fixed bug: HTML entities in alert name.

2012-02-28 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* util/pandora_manage.pl: Modify call to function 
	pandora_delete_not_policy_modules adding md5 filename like a 
	parameter.

	Fixes: #3486481

2012-02-28  Vanessa Gil  <vanessa.gil@artica.es>

	* bin/PandoraFMS/Core.pm: Fixed bug: double safe_input in event name.

2012-02-20  Koichiro Kikuchi  <koichiro@rworks.jp>

	* lib/PandoraFMS/SNMPServer.pm: Parse source field to obtain source
	 IP address not only when trap version is SNMPv2, but also 
	 snmp_pdu_address set to 1.

	* conf/pandora_server.conf: Fixed comment.
