@@ -1,3 +1,10 @@
+2012-03-20 Miguel de Dios  <miguel.dedios@artica.es>
+
+	* util/pandora_db.pl: added lines to purge the contents in the report that
+	have not a modules or agents.
+	
+	Merged from the branch pandora_4.0
+	
 2012-03-12  Sancho Lerena <slerena@artica.es>
 
 	* util/pandora_xml_stress.agents
